# rust-kubelet

./: .gitignore  Cargo.toml  mycert.crt  mycert.key  mykey.crt  pod.yaml  readme.md
src/: main.rs
src/kubelet/: bootstrapping.rs  minikubelet.rs  mod.rs  operator.rs
src/nodemod/: node.rs
src/protos/: api.proto
src/provider/: mod.rs  pod.rs
