[package]
name = "rust-kubelet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "fs","io-std"] }
tracing-subscriber = "0.3.16"
tracing = { version = "0.1.37", features = ['log'] }
kube = "0.76.0"
rcgen = "0.8.14"
chrono = "0.4.23"
serde_json = "1.0.89"
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_23"] }
kube-runtime = "0.76.0"
futures = "0.3.25"
base64 = "0.13.1"