[package]
name = "rust-kubelet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "fs", "io-std"] }
tracing-subscriber = "0.3.16"
tracing = { version = "0.1.37", features = ['log'] }
kube = { version = "0.80.0", features = ["runtime", "derive"] }
serde_json = "1.0.89"
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
base64 = "0.13.1"
chrono = "0.4.23"
futures = "0.3.27"
k8s-cri = "0.6.0"
tonic = "0.8.3"
serde = "1.0.156"
prost = "0.11"